<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_my_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/acty_user_register_nick_name"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/acty_user_info_nick_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="请输入用户名"
                    android:background="@null"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/acty_user_register_name"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/acty_user_info_name"
                    android:layout_width="294dp"
                    android:layout_height="wrap_content"
                    android:hint="请输入姓名"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:background="@null"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/acty_user_register_pass"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/acty_user_info_pass"
                    android:layout_width="294dp"
                    android:layout_height="wrap_content"
                    android:hint="请输入密码"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:background="@null"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:layout_marginLeft="15dp"
                    android:paddingRight="10dp"
                    android:text="@string/acty_user_register_sex"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/diagnose_sex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <RadioButton
                        android:id="@+id/diagnose_man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:textSize="15sp"
                        android:textColor="#666666"
                        android:text="@string/diagnose_man"/>
                    <RadioButton
                        android:id="@+id/diagnose_woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="#666666"
                        android:text="@string/diagnose_woman"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/acty_user_register_sec_pass"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/acty_user_info_sec_pass"
                    android:layout_width="294dp"
                    android:layout_height="wrap_content"
                    android:hint="请再次输入密码"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:background="@null"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/acty_user_register_phone_number"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/acty_user_info_phone_number"
                    android:layout_width="294dp"
                    android:layout_height="wrap_content"
                    android:hint="请输入电话号码"
                    android:inputType="number"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:background="@null"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/acty_user_register_weixin"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/acty_user_info_weixin"
                    android:layout_width="294dp"
                    android:layout_height="wrap_content"
                    android:hint="请输入微信"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:background="@null"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/acty_user_register_qq"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/acty_user_info_qq"
                    android:layout_width="294dp"
                    android:layout_height="wrap_content"
                    android:hint="请输入QQ"
                    android:inputType="number"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:background="@null"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/acty_user_register_email"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/acty_user_info_email"
                    android:layout_width="294dp"
                    android:layout_height="wrap_content"
                    android:hint="请输入email"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:background="@null"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/acty_user_register_detail_address"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/acty_user_info_address"
                    android:layout_width="294dp"
                    android:layout_height="wrap_content"
                    android:hint="请输入住址"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:background="@null"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="@string/acty_user_register_birthday"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/acty_user_info_birthday"
                    android:layout_width="294dp"
                    android:layout_height="wrap_content"
                    android:hint="请输入生日"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:background="@null"/>
            </LinearLayout>
            <Button
                android:id="@+id/acty_user_register_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/acty_user_register_submit"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="@dimen/text_size_18_title_small"
                android:textColor="@color/white"
                android:background="@drawable/btn_submit_select"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>